log
Wed 10 May 2023 12:27:36 AM UTC: 
 tests:  0|4
total_score: 0/70
26da5bb
Thu 11 May 2023 02:26:17 AM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
b6db4af
Thu 11 May 2023 02:27:42 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7e5c73f
Thu 11 May 2023 02:28:32 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
6adc4bb
Thu 11 May 2023 02:28:54 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
064526d
Thu 11 May 2023 02:29:40 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
8ddb382
Thu 11 May 2023 02:33:14 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
3c3dcec
Thu 11 May 2023 02:34:57 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|2
total_score: 20/70
19cb2f4
Thu 11 May 2023 02:50:34 AM UTC: 
 heap.c | 23 +++++++++++++++++++++--
 1 file changed, 21 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
5eeddcc
Thu 11 May 2023 02:50:49 AM UTC: 
 heap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
5e46d02
Thu 11 May 2023 02:51:03 AM UTC: 
 heap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
19931bc
Thu 11 May 2023 02:51:58 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
c189771
Thu 11 May 2023 02:52:17 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|2
total_score: 35/70
abac781
Thu 11 May 2023 02:52:41 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|2
total_score: 35/70
9481958
Thu 11 May 2023 02:53:20 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
0db62b5
Thu 11 May 2023 03:01:31 AM UTC: 
 heap.c | 40 ++++++++++++++++++++++++++++++++++++----
 1 file changed, 36 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heapify_d’:
heap.c:53:8: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   53 |   if (H->priorities[left] > H->priorities[index]) {
      |        ^~
heap.c:53:30: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   53 |   if (H->priorities[left] > H->priorities[index]) {
      |                              ^~
heap.c:54:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   54 |     swap(H->priorities, left, index);
      |           ^~
heap.c:56:15: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   56 |   } else if (H->priorities[right] > H->priorities[index]) {
      |               ^~
heap.c:56:38: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   56 |   } else if (H->priorities[right] > H->priorities[index]) {
      |                                      ^~
heap.c:57:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   57 |     swap(H->priorities, right, index);
      |           ^~
heap.c:46:20: error: unused variable ‘aux’ [-Werror=unused-variable]
   46 |   int left, right, aux;
      |                    ^~~
heap.c: In function ‘removeHeap’:
heap.c:77:9: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   77 |   swap(H->priorities, root, lastNode);
      |         ^~
heap.c:77:23: error: ‘root’ undeclared (first use in this function)
   77 |   swap(H->priorities, root, lastNode);
      |                       ^~~~
heap.c:77:23: note: each undeclared identifier is reported only once for each function it appears in
heap.c: In function ‘heap_pop’:
heap.c:84:3: error: implicit declaration of function ‘reorderHeapDown’; did you mean ‘reorderHeapUp’? [-Werror=implicit-function-declaration]
   84 |   reorderHeapDown(pq);
      |   ^~~~~~~~~~~~~~~
      |   reorderHeapUp
cc1: all warnings being treated as errors
Compilation failed
0417e53
Thu 11 May 2023 03:05:40 AM UTC: 
 heap.c | 38 ++++++++++++++++----------------------
 1 file changed, 16 insertions(+), 22 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heapify_d’:
heap.c:65:8: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   65 |   if (H->priorities[left] > H->priorities[index]) {
      |        ^~
heap.c:65:30: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   65 |   if (H->priorities[left] > H->priorities[index]) {
      |                              ^~
heap.c:66:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   66 |     swap(H->priorities, left, index);
      |           ^~
heap.c:68:15: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   68 |   } else if (H->priorities[right] > H->priorities[index]) {
      |               ^~
heap.c:68:38: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   68 |   } else if (H->priorities[right] > H->priorities[index]) {
      |                                      ^~
heap.c:69:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   69 |     swap(H->priorities, right, index);
      |           ^~
heap.c:58:20: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |   int left, right, aux;
      |                    ^~~
heap.c: In function ‘heap_pop’:
heap.c:77:3: error: implicit declaration of function ‘reorderHeapDown’; did you mean ‘reorderHeapUp’? [-Werror=implicit-function-declaration]
   77 |   reorderHeapDown(pq);
      |   ^~~~~~~~~~~~~~~
      |   reorderHeapUp
cc1: all warnings being treated as errors
Compilation failed
0d94f3c
Thu 11 May 2023 03:06:13 AM UTC: 
 heap.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:4:
heap.c: In function ‘reorderHeapDown’:
heap.c:65:8: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   65 |   if (H->priorities[left] > H->priorities[index]) {
      |        ^~
heap.c:65:30: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   65 |   if (H->priorities[left] > H->priorities[index]) {
      |                              ^~
heap.c:66:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   66 |     swap(H->priorities, left, index);
      |           ^~
heap.c:68:15: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   68 |   } else if (H->priorities[right] > H->priorities[index]) {
      |               ^~
heap.c:68:38: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   68 |   } else if (H->priorities[right] > H->priorities[index]) {
      |                                      ^~
heap.c:69:11: error: ‘Heap’ {aka ‘struct Heap’} has no member named ‘priorities’
   69 |     swap(H->priorities, right, index);
      |           ^~
heap.c:58:20: error: unused variable ‘aux’ [-Werror=unused-variable]
   58 |   int left, right, aux;
      |                    ^~~
cc1: all warnings being treated as errors
Compilation failed
a7c497e
Thu 11 May 2023 03:09:27 AM UTC: 
 heap.c | 25 +++++++++++++------------
 1 file changed, 13 insertions(+), 12 deletions(-)
 tests:  7|1
total_score: 45/70
2dc5baa
Thu 11 May 2023 03:16:06 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
6c12379
Thu 11 May 2023 03:22:13 AM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  7|1
total_score: 45/70
fde7755
Thu 11 May 2023 03:22:23 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
0e9f6a1
Thu 11 May 2023 03:23:04 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
b99cf89
Thu 11 May 2023 03:28:49 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 45/70
a8f8880
Thu 11 May 2023 03:29:00 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  7|1
total_score: 55/70
5fb8b9f
